Added support for zipping directories or individual files

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		</div>
 
 		<div class="breadcrumbs"></div>
+        <div id="zipinfo"><span></span><a href="#">Download</a></div>
 
 		<ul class="data"></ul>
 
