--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<title>Cute file browser</title>
+	<title>Exertis Library</title>
 
 
 	<!-- Include our stylesheet -->
