Support Mouseover Image preview Add exertis logo

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
 </head>
 <body>
+        <div class="overlay"></div>
+
 
 	<div class="filemanager">
+            <div id="header"></div>
 
 		<div class="search">
 			<input type="search" placeholder="Find a file.." />
@@ -47,6 +50,7 @@
 	<!-- Include our script files -->
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="assets/js/script.js"></script>
+        <script src="assets/js/jquery.simplemodal.1.4.4.min.js"></script>
 
 </body>
 </html>
