--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <body>
         <div class="overlay"></div>
         
+        <div class="logo">
+            <img src="assets/img/exertis-logo.png" />
+        </div>
+        
         <div class='login'>
 
             <h1>Please provide a password.</h1>
